# mcp-antigravity-scrape-n-roll-vector-embeddings

./: .gitignore  EXPAND-ABTest.md  EXPAND-EU.md  README.md  TASK.md  builtin_scraper.py  extractor.py  japan_scraper.py  job_matcher_mcp.py  job_scorer.py  linkedin_scraper.py  pyproject.toml  scraper.py  serper_scraper.py
_internal/: 00_run_apify.py  01_structure_data.py
agents/: EXPAND-ABTest.md  EXPAND-Japan.md  EXPAND-LI.md  EXPAND-routing.md  EXPAND.md
data/: .gitkeep  compare_presales_se_20260508_212100.csv  compare_traditional_sales_20260508_211923.csv  raw_jobs_20260315_214049.csv  raw_jobs_20260506_162504.csv  raw_jobs_20260506_163245.csv  raw_jobs_20260506_212642.csv  raw_jobs_20260506_231041.csv  raw_jobs_20260506_231224.csv  raw_jobs_20260508_094329.csv  raw_jobs_20260508_233811.csv
output/: .gitkeep  jobs_ranked_20260315_214528.csv  jobs_ranked_20260506_163621.csv  jobs_ranked_20260506_212835.csv  jobs_ranked_20260506_231430.csv  jobs_ranked_20260506_231455.csv  jobs_ranked_20260508_094752.csv
scrapers/: builtin_scraper.py  keywords.py  linkedin_scraper.py  serper_scraper.py
tests/: debug_scores.py  test_compare_searches.py  test_embedding.py  test_japan_scraper.py  test_linkedin_scraper.py  test_ranking.py  test_routing_parallel.py  test_serper.py
tests/fixtures/: .gitkeep  sample_jobs.csv  test_profile.json
